--- a/Caddyfile
+++ b/Caddyfile
@@ -51,15 +51,10 @@ safepsy.com {
         }
     }
 
-    # SPA routing - fallback to backend for client-side routing
+    # SPA routing - fallback to index.html for client-side routing
     handle {
         try_files {path} {path}/ /index.html
-        reverse_proxy spglobalv1-landing:3000 {
-            header_up Host {host}
-            header_up X-Real-IP {remote}
-            header_up X-Forwarded-For {remote}
-            header_up X-Forwarded-Proto {scheme}
-        }
+        file_server
     }
 
     # Cache static assets
