Add www.safepsy.com redirect to safepsy.com
- Configure Caddyfile to redirect www.safepsy.com to safepsy.com with permanent redirect (301)
- Preserve URI paths in redirects
- Ensure canonical domain handling for SEO

--- a/Caddyfile
+++ b/Caddyfile
@@ -14,6 +14,11 @@
     redir https://safepsy.com{uri} permanent
 }
 
+# Redirect www.safepsy.com to safepsy.com
+www.safepsy.com {
+    redir https://safepsy.com{uri} permanent
+}
+
 # Main site configuration for safepsy.com
 safepsy.com {
     # Security headers
